--- a/HRManagementSoftware/wwwroot/index.html
+++ b/HRManagementSoftware/wwwroot/index.html
@@ -1,11 +1,28 @@
 ﻿<!DOCTYPE html>
-<html data-ng-app="">
+<html data-ng-app="hrApp">
 <head>
     <meta charset="utf-8" />
-    <script src="js/angular.min.js"></script>
+    <link rel="stylesheet" href="/css/bootstrap.min.css" />
+    <script src="/js/angular.min.js"></script>
+    <script src="/js/app.js"></script>
     <title>HR Management Software</title>
 </head>
-<body>
-    Hello World!
+<body data-ng-controller="EmployeeController">
+    <table class="table table-bordered">
+        <thead>
+            <tr>
+                <th>FirstName</th>
+                <th>LastName</th>
+                <th>Age</th>
+            </tr>
+        </thead>
+        <tbody>
+            <tr data-ng-repeat="employee in employees">
+                <td>{{ employee.firstName }}</td>
+                <td>{{ employee.lastName }}</td>
+                <td>{{ employee.age }}</td>
+            </tr>
+        </tbody>
+    </table>
 </body>
 </html>
