--- a/HRManagementSoftware/wwwroot/app/employee-list/employee-list.template.html
+++ b/HRManagementSoftware/wwwroot/app/employee-list/employee-list.template.html
@@ -14,3 +14,5 @@
         </tr>
     </tbody>
 </table>
+<a class="btn btn-success" href="#!/employees/create">Create employee</a>
+<button class="btn btn-danger">Delete employee</button>
