Add deleting of employees

--- a/HRManagementSoftware/wwwroot/app/employee-list/employee-list.template.html
+++ b/HRManagementSoftware/wwwroot/app/employee-list/employee-list.template.html
@@ -15,4 +15,4 @@
     </tbody>
 </table>
 <a class="btn btn-success" href="#!/employees/create">Create employee</a>
-<button class="btn btn-danger">Delete employee</button>
+<a class="btn btn-danger" href="#!/employees/delete">Delete employees</a>
