--- a/HRManagementSoftware/wwwroot/index.html
+++ b/HRManagementSoftware/wwwroot/index.html
@@ -11,6 +11,8 @@
     <script src="/app/employee-list/employee-list.component.js"></script>
     <script src="/app/employee-detail/employee-detail.module.js"></script>
     <script src="/app/employee-detail/employee-detail.component.js"></script>
+    <script src="/app/employee-delete-list/employee-delete-list.module.js"></script>
+    <script src="/app/employee-delete-list/employee-delete-list.component.js"></script>
     <title>HR Management Software</title>
 </head>
 <body>
