--- a/HRManagementSoftware/wwwroot/app/employee-delete-list/employee-delete-list.template.html
+++ b/HRManagementSoftware/wwwroot/app/employee-delete-list/employee-delete-list.template.html
@@ -1,4 +1,6 @@
-﻿<table class="table table-bordered">
+﻿<a class="backLink" href="#!/employees">&lt; Back to list</a>
+
+<table class="table table-bordered">
     <thead>
         <tr>
             <th>FirstName</th>
@@ -14,5 +16,4 @@
         </tr>
     </tbody>
 </table>
-<a class="btn btn-success" href="#!/employees">Back</a>
 <button class="btn btn-danger" data-ng-click="deleteSelectedEmployees()">Delete selected employees</button>
