--- a/HRManagementSoftware/wwwroot/app/employee-detail/employee-detail.template.html
+++ b/HRManagementSoftware/wwwroot/app/employee-detail/employee-detail.template.html
@@ -1,4 +1,4 @@
-﻿<a href="#!/employees">&lt; Back to list</a>
+﻿<a class="backLink" href="#!/employees">&lt; Back to list</a>
 
 <form>
     <div class="form-group">
