--- a/HRManagementSoftware/wwwroot/index.html
+++ b/HRManagementSoftware/wwwroot/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="utf-8" />
     <link rel="stylesheet" href="/css/bootstrap.min.css" />
+    <link rel="stylesheet" href="/css/styles.css" />
     <script src="/js/angular.min.js"></script>
     <script src="/js/angular-route.min.js"></script>
     <script src="/app/app.module.js"></script>
@@ -17,7 +18,7 @@
 </head>
 <body>
     <div class="container">
-        <div class="row" data-ng-view>
+        <div class="row withPaddingTop" data-ng-view>
         </div>
     </div>
 </body>
